# rvc-bindings-examples

./: README.md
c#/: CMakeLists.txt  CameraTest.cs  CaptureOptions_X1.cs  CaptureOptions_X2.cs  Halcon_Extension.cs  MultiCamera.cs  Opencv_Extension.cs  QuickCapture_X1.cs  QuickCapture_X2.cs  RVC_CSharp.cs  RVC_CSharp_Tool.cs  VisionPro_Extension.cs
c#/RVC_C/: CMakeLists.txt  RVC_C.cpp  RVC_C.h
c++/: AdjustCaptureMode.cpp  AdjustCaptureParameter.cpp  CMakeLists.txt  CaptureAndConvertToPCLType.cpp  CaptureByX2.cpp  CaptureGigE.cpp  CaptureInContinueMode.cpp  CaptureOptionsX1.cpp  CaptureOptionsX2.cpp  CaptureUSB.cpp  ConvertDepthMapToPointMap.cpp  GetAutoNoiseRemovalSetting.cpp  GetBilateralFilteredPointMap.cpp  GetCaliBoardPoseX1.cpp  GetCaliBoardPoseX2.cpp  GetCameraParameter.cpp  GetConfidenceMap.cpp  GetDepthImage.cpp  GetDownsamplePointMap.cpp  GetImageCorresponcePoint.cpp  GetNoiseRemovalPointMap.cpp  GetNormalMap.cpp  GetPointMapSeperated.cpp  GetSmoothPointMap.cpp  GetValidPointMap.cpp  GetZFilteredPointMap.cpp  LaserCameraCapture.cpp  QuickCaptureX1.cpp  QuickCaptureX2.cpp  SaveColorPointMap.cpp  SaveLoadCameraSetting.cpp  SaveLoadCaptureOptions.cpp  SetROI.cpp  TruncatePointCloud.cpp  X1AutoHdrSetParam.cpp  X1AutoSetParam.cpp  X1Capture2D.cpp  X1HDR.cpp  X1SetTransformation.cpp  X2AutoHdrSetParam.cpp  (+4 more)
c++/IO/: FileIO.cpp  SavePointMap.cpp  SavePointMap.h
c++/Utils/: CaliBoardUtils.cpp  CaliBoardUtils.h  PointCloudUtils.cpp  PointCloudUtils.h  Timer.h
python/: AdjustCaptureMode.py  AdjustCaptureParameter.py  CaptureByX2.py  CaptureGigE.py  CaptureInContinueMode.py  CaptureOptionsX1.py  CaptureOptionsX2.py  CaptureUSB.py  ConvertDepthMapToPointMap.py  GetAutoNoiseRemovalSetting.py  GetBilateralFilteredPointMap.py  GetCaliBoardPoseX1.py  GetCaliBoardPoseX2.py  GetCameraParameter.py  GetConfidenceMap.py  GetDepthImage.py  GetDownsamplePointMap.py  GetImageCorresponcePoint.py  GetNoiseRemovalPointMap.py  GetNormalMap.py  GetSmoothPointMap.py  GetValidPointMap.py  GetZFilteredPointMap.py  QuickCaptureX1.py  QuickCaptureX2.py  SaveColorPointMap.py  SaveLoadCameraSetting.py  SaveLoadCaptureOptions.py  SetROI.py  TruncatePointCloud.py  X1AutoHdrSetParam.py  X1AutoSetParam.py  X1Capture2D.py  X1HDR.py  X1SetTransformation.py  X1TestAccuracy.py  X2AutoHdrSetParam.py  X2AutoSetParam.py  X2Capture2D.py  X2HDR.py  (+2 more)
python/PyRVC/: CMakeLists.txt  PyRVC.cpp  README.md  setup.py
python/Utils/: CaliBoardUtils.py
